--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,9 @@
 machine:
   timezone: Asia/Tokyo
 
-  python:
-    version:2.7
+ provider:
+  name: aws
+    version:python2.7
     
 cache:
   directories:
