--- a/serverless.yml
+++ b/serverless.yml
@@ -20,13 +20,18 @@ provider:
     NODE_ENV: ${self:custom.stage}
 
 functions:
-  switchboard1_func1:
-  incoming:
-   handler: switchboard._airflow_request
-events:
+  switchboard-_airflow_request:
+    handler: switchboard/_airflow_request
+    events:
       - http:
-        path: ${self:custom.stage}/Nike-CircleCi-Lambda
-        method: post
+          path: ${self:custom.stage}/airflow_request
+          method: post
+  switchboard-_em7_message_check_file_system:
+    handler: handlers/_em7_message_check_file_system
+    events:
+      - http:
+          path: ${self:custom.stage}/activation/em7_message_check_file_system
+          method: get
 
 package:
   exclude:
