--- a/serverless.yml
+++ b/serverless.yml
@@ -30,7 +30,7 @@ functions:
     handler: handlers/_em7_message_check_file_system
     events:
       - http:
-          path: ${self:custom.stage}/activation/em7_message_check_file_system
+          path: ${self:custom.stage}/activation/em7_message
           method: get
 
 package:
