--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,14 @@ provider:
   name: aws
   runtime: python2.7
   
+  resources:
+  Resources:
+    SkillBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: nike-lambda      
+        AccessControl: PublicRead
+  
   stage: prod
   region: us-west-2
   profile: support-circle-ci
